--- a/scripts/rmd_notebooks/preprocessing.Rmd
+++ b/scripts/rmd_notebooks/preprocessing.Rmd
@@ -551,7 +551,7 @@ vis.list <- lapply(
     biotype.colname = "gene_biotype",
     assay = "kallisto_collapsed"
   )
-)
+)%>%suppressMessages()
 ```
 
 # Save visium list(s)
