--- a/scripts/rmd_notebooks/heart_analysis.Rmd
+++ b/scripts/rmd_notebooks/heart_analysis.Rmd
@@ -221,6 +221,31 @@ for(i in 1:nrow(meta_heart)){
 }
 gc()
 ```
+
+## Add Reovirus counts based on kallisto output
+```{r}
+heart.list <- lapply(
+  heart.list,
+  FUN = function(SEU){
+    
+    if(reo.genes %in% Features(SEU,assay = "kallisto_collapsed") %>% any()){
+      tmp.counts = GetAssayData(
+        SEU,
+        assay="kallisto_collapsed",
+        slot="counts"
+      )[reo.genes,]
+      tmp.counts = colSums(tmp.counts)
+      SEU$reo.counts.kallisto <- tmp.counts
+    }else{
+      SEU$reo.counts.kallisto <- 0
+    }
+    
+    return(SEU)
+  }
+)
+```
+
+
 ### Collapse multimappers and preprocess collapsed counts (kallisto)
 ```{r warning=FALSE}
 # collapse multimappers
@@ -312,7 +337,7 @@ for(i in 1:length(heart.list)){
 
 # Spatially-dependent gene expression patterns
 ## Clustering results
-```{r}
+```{r message=FALSE, warning=FALSE}
 suppressMessages(
   visListPlot(
     heart.list,
@@ -320,17 +345,16 @@ suppressMessages(
       stringr::str_remove_all(pattern ="Heart-"),
     assay="kallisto_collapsed",
     reduction="space",
-    # slot = 'counts',
-    pt.size=0.2,
+    slot = 'counts',
+    pt.size=0.8,
     legend.position = "bottom",
     font.size = 8,
     axis.title.angle.y=0,
     nrow = 1,
-    na.value=gray(0.69),
-    # colormap = rev(mckolors$Spectral),
+    colormap = "magma", colormap.direction = -1,
     # combine = F,
     verbose=F,
-    features = reo.genes[1:8]
+    features = c("reo.counts.kallisto",top.reo.genes[1:6])
   )
 )
 ```
@@ -468,7 +492,7 @@ reo.genes <- lapply(
   FUN=function(VIS) grepGenes(
     SEU=VIS,
     pattern = "T1L",
-    assay="Spatial",
+    assay="kallisto",
     sort.by = T,
     verbose=F
     )
@@ -484,21 +508,143 @@ print(reo.genes)
 heart.list <- lapply(
   heart.list,
   FUN = function(SEU){
-    
-    if(reo.genes %in% Features(SEU,assay = "Spatial") %>% any()){
+    if(reo.genes %in% Features(SEU,assay = "kallisto") %>% any()){
       tmp.counts = GetAssayData(
         SEU,
-        assay="Spatial",
+        assay="kallisto",
         slot="counts"
       )[reo.genes,]
       tmp.counts = colSums(tmp.counts)
       SEU$reo.counts <- tmp.counts
+      SEU$reo.log2p1 <- log2(tmp.counts+1)
     }else{
       SEU$reo.counts <- 0
+      SEU$reo.log2p1 <- 0
     }
     
     return(SEU)
   }
+)
+```
+
+# Load in xGen numbers
+```{r}
+library(SeuratDisk)
+xGen.list <- list()
+xGen.samples <- paste0(
+  "/workdir/dwm269/totalRNA/data/kallisto/GRCm39_REOT1L_Visium/",
+  c(
+    "T1L_D7PI_xGen",
+    "Vis_yPAP_2C_xGen",
+    "Vis_yPAP_3B_xGen"
+  ),
+  "/kb_out/counts_unfiltered/adata"
+)
+
+# convert h5ad to h5seurat
+for(i in 1:length(xGen.samples)){
+  tmp.h5 <- xGen.samples[i]
+  print(tmp.h5)
+  if(!file.exists(paste0(tmp.h5,".h5seurat"))){
+    
+    Convert(
+      paste0(tmp.h5,".h5ad"),
+      dest = "h5seurat",
+      overwrite = TRUE
+    )
+  }
+
+  # Load h5seurat and subset out counts for sample
+  tmp.seu <- LoadH5Seurat(
+    paste0(tmp.h5,".h5seurat"),
+  ) 
+  
+  # Select non-zero features
+  tmp.seu <- subset( 
+    tmp.seu,
+    features = rownames(tmp.seu)[Matrix::rowSums(tmp.seu) > 0]
+  )
+  
+  # convert ensembl IDs to MGI gene IDs
+  # tmp.mat <- GetAssayData(tmp.seu,assay="RNA")
+  # rownames(tmp.mat) <- ens2gene(
+  #   ens=rownames(tmp.mat),
+  #   biomart.info = mouse.info,
+  #   ens.colname = "ensembl_gene_id",
+  #   gene.colname = "mgi_symbol",
+  #   force.unique = T,
+  #   ncores=24,
+  #   verbose=F
+  # )
+  
+  # add kallisto counts to vis_list
+  # xGen.list[[i]][["kallisto"]] <- CreateAssayObject(
+  #   counts = tmp.mat,
+  #   min.cells = 1
+  # )
+  xGen.list[[i]] <- tmp.seu
+  rm(tmp.seu)
+  # rm(tmp.mat)
+}
+gc()
+```
+
+```{r}
+reo.genes = grepGenes(
+  xGen.list[[2]],
+  pattern = "Reo",
+  sort.by = "ABC"
+)
+
+# Add xGen numbers 
+## Control Visium
+tmp.mat <- GetAssayData(xGen.list[[1]])
+tmp.mat <- tmp.mat[reo.genes, colnames(tmp.mat) %in% Cells(heart.list[[2]])] #only keep Reo genes and spots that pass QC
+
+zero.spots = Cells(heart.list[[2]])[!Cells(heart.list[[2]])%in%colnames(tmp.mat)] # barcodes of *spots not detected* in xGen assay
+tmp.mat <- cbind( # add zeroes for spots not detected by xGen 
+  tmp.mat, 
+  matrix(
+    data = 0,
+    nrow=nrow(tmp.mat),
+    ncol=length(zero.spots),
+    dimnames=list(
+      rownames(tmp.mat),
+      zero.spots
+    )
+  )%>% as.sparse()
+)
+tmp.mat <- tmp.mat[reo.genes, Cells(heart.list[[2]])] #make sure everything is in the right order
+
+heart.list[[2]][["xGen.kallisto"]] <- CreateAssayObject(counts = tmp.mat)
+#meta_heart$sample=="yPAP-Pro_Heart-D7T1L"
+heart.list[[2]]$nCount_xGen.kallisto.log2p1 <- log2(heart.list[[2]]$nCount_xGen.kallisto+1)
+
+
+## SUPERase + spTotal
+#TODO
+
+
+## Protector + spTotal
+tmp.mat <- GetAssayData(xGen.list[[3]])
+tmp.mat <- tmp.mat[reo.genes, colnames(tmp.mat) %in% Cells(heart.list[[4]])] #only keep Reo genes and spots that pass QC
+
+heart.list[[4]][["xGen.kallisto"]] <- CreateAssayObject(counts = tmp.mat)
+#meta_heart$sample=="yPAP-Pro_Heart-D7T1L"
+heart.list[[4]]$nCount_xGen.kallisto.log2p1 <- log2(heart.list[[4]]$nCount_xGen.kallisto+1)
+
+# Plot total counts
+visListPlot(
+  heart.list[c(2,4)],
+  sample.titles = meta_heart$sample[c(2,4)],
+  reduction = "space",
+  pt.size = 2,
+  features=c("reo.log2p1","nCount_xGen.kallisto.log2p1"),
+  alt.titles = c("log2(Reovirus UMIs+1)","log2(xGen Reovirus UMIs+1)"),
+  colormap = "magma",
+  colormap.direction = -1
+)&theme(
+  legend.position="right"
 )
 ```
 
@@ -533,22 +679,6 @@ visListPlot(
 
 ) 
 ```
-
-# Load in xGen numbers
-```{r}
-# xgen <- Seurat::Read10X("/workdir/dwm269/totalRNA/data/STARsolo/GRCm39_GENCODEM27_Visium/Vis_yPAP_2C_xGen_STARsolo/Solo.out/GeneFull/filtered")
-xgen <- Seurat::Read10X("/workdir/dwm269/totalRNA/data/spaceranger_count/Heart_T1L_D7PI_yPAP_xGen_spaceranger_count_GRCm38REO/outs/filtered_feature_bc_matrix/")
-
-xgen <- xgen[rownames(xgen)[grep(x = rownames(xgen), pattern="Reo")], colnames(xgen) %in% colnames(vis.list[[3]])] #only keep Reo genes and spots that pass QC
-
-vis.list[[3]][["xGen"]] <- CreateAssayObject(counts = xgen)
-
-heart.vis <- vis.list[[3]] 
-heart.vis <- subset(heart.vis,cells=Cells(heart.vis)[heart.vis@reductions$space@cell.embeddings[,2]>20]) #remove extraneous spot
-print("")
-print(GetAssayData(heart.vis,assay="xGen")%>%rowSums())
-```
-
 # Heart genes
 ```{r fig.height=8, fig.width=8, message=FALSE, warning=FALSE}
 visListPlot(
@@ -559,7 +689,7 @@ visListPlot(
   legend.position = "right",
   font.size = 12,
   # features = ribo.genes[ribo.genes %in% rownames(vis.list[[3]])]
-  features=c('Rsad2', 'Irf7','Ifit3', 'Ubd'),
+  features= c('Rsad2', 'Irf7','Ifit3', 'Ubd'),
   combine=F
 ) %>% wrap_plots()&theme(plot.margin = unit(rep(0,4),"in"))
 
